--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -10,16 +10,17 @@
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/blue_shade_1">
+        android:background="@color/blue_shade_1"
+        android:id="@+id/constraint_layout">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayout2"
             style="@style/TextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:hint="Enter Course Name"
-            android:padding="5dp"
+            android:layout_marginTop="@dimen/_40dp"
+            android:hint="@string/enter_course_name"
+            android:padding="@dimen/_5dp"
             android:textColorHint="@color/white"
             app:hintTextColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
@@ -35,7 +36,7 @@
                 android:inputType="text"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
-                android:textSize="14sp" />
+                android:textSize="@dimen/_14sp" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -44,9 +45,9 @@
             style="@style/TextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:hint="Enter Course Price"
-            android:padding="5dp"
+            android:layout_marginTop="@dimen/_8dp"
+            android:hint="@string/enter_course_price"
+            android:padding="@dimen/_5dp"
             android:textColorHint="@color/white"
             app:hintTextColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
@@ -62,7 +63,7 @@
                 android:inputType="number"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
-                android:textSize="14sp" />
+                android:textSize="@dimen/_14sp" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -71,9 +72,9 @@
             style="@style/TextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:hint="Enter Course Suited For"
-            android:padding="5dp"
+            android:layout_marginTop="@dimen/_8dp"
+            android:hint="@string/enter_course_suited_for"
+            android:padding="@dimen/_5dp"
             android:textColorHint="@color/white"
             app:hintTextColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/textInputLayout4"
@@ -89,7 +90,7 @@
                 android:inputType="text"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
-                android:textSize="14sp" />
+                android:textSize="@dimen/_14sp" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -98,9 +99,9 @@
             style="@style/TextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:hint="Enter Course Image Link"
-            android:padding="5dp"
+            android:layout_marginTop="@dimen/_8dp"
+            android:hint="@string/enter_course_image_link"
+            android:padding="@dimen/_5dp"
             android:textColorHint="@color/white"
             app:hintTextColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/textInputLayout5"
@@ -116,7 +117,7 @@
                 android:inputType="text"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
-                android:textSize="14sp" />
+                android:textSize="@dimen/_14sp" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -125,9 +126,9 @@
             style="@style/TextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:hint="Enter Course Link"
-            android:padding="5dp"
+            android:layout_marginTop="@dimen/_8dp"
+            android:hint="@string/enter_course_link"
+            android:padding="@dimen/_5dp"
             android:textColorHint="@color/white"
             app:hintTextColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/textInputLayout6"
@@ -143,7 +144,7 @@
                 android:inputType="text"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
-                android:textSize="14sp" />
+                android:textSize="@dimen/_14sp" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -151,10 +152,10 @@
             android:id="@+id/textInputLayout6"
             style="@style/TextInputLayout"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginTop="8dp"
-            android:hint="Enter Course Description"
-            android:padding="5dp"
+            android:layout_height="@dimen/_200dp"
+            android:layout_marginTop="@dimen/_8dp"
+            android:hint="@string/enter_course_description"
+            android:padding="@dimen/_5dp"
             android:textColorHint="@color/white"
             app:hintTextColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/idbtnAddCourse"
@@ -170,7 +171,7 @@
                 android:inputType="text"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
-                android:textSize="14sp" />
+                android:textSize="@dimen/_14sp" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -178,9 +179,9 @@
             android:id="@+id/idbtnAddCourse"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="@dimen/_32dp"
             android:background="@drawable/custom_button_back"
-            android:text="Add Course"
+            android:text="@string/add_course"
             android:textAllCaps="false"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
