--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     tools:context=".LoginActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-
+        android:id="@+id/constraint_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/blue_shade_1">
@@ -17,11 +17,11 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/idTILuserName"
             style="@style/TextInputLayout"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/_0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="150dp"
-            android:hint="Enter User Name"
-            android:padding="5dp"
+            android:layout_marginTop="@dimen/_150dp"
+            android:hint="@string/enter_user_name"
+            android:padding="@dimen/_5dp"
             android:textColorHint="@color/white"
             app:hintTextColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/idTILuserPassword"
@@ -37,7 +37,7 @@
                 android:inputType="textEmailAddress"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
-                android:textSize="14sp"
+                android:textSize="@dimen/_14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -47,11 +47,11 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/idTILuserPassword"
             style="@style/TextInputLayout"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/_0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:hint="Enter Your Password"
-            android:padding="5dp"
+            android:layout_marginTop="@dimen/_16dp"
+            android:hint="@string/enter_your_password"
+            android:padding="@dimen/_5dp"
             android:textColorHint="@color/white"
             app:hintTextColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/idbtnLogin"
@@ -67,17 +67,17 @@
                 android:inputType="textPassword"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
-                android:textSize="14sp" />
+                android:textSize="@dimen/_14sp" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/idbtnLogin"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/_0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="200dp"
+            android:layout_marginTop="@dimen/_200dp"
             android:background="@drawable/custom_button_back"
-            android:text="Login"
+            android:text="@string/login"
             android:textAllCaps="false"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
@@ -86,13 +86,13 @@
 
         <TextView
             android:id="@+id/idTVRegister"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/_0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="New User? Register Here"
+            android:layout_marginTop="@dimen/_16dp"
+            android:text="@string/new_user_register_here"
             android:textAlignment="center"
             android:textColor="@color/white"
-            android:textSize="18sp"
+            android:textSize="@dimen/_18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/idbtnLogin" />
