--- a/app/src/main/res/layout/fragment_add_course.xml
+++ b/app/src/main/res/layout/fragment_add_course.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/blue_shade_1"
-        android:id="@+id/constraint_layout">
+        android:id="@+id/add_course_constraint_layout">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayout2"
